# Trekking_2025

./: .gitignore  README.md
Esp32/Esp_Firmware/: sdkconfig  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old  sdkconfig.old
Esp32/Esp_Firmware/include/: global_variables.h  i2c.h  sycronization.h  task_core1.h  types.h  typesana.h  typestai.h  typos_new.h
Esp32/Esp_Firmware/src/: i2c.c  initializers.c  main.c  pid.c  pwm.c  task_core0.c  task_core1.c
Esp32/Testes/ZigoNico/include/: i2c.h  pid.h  sycronization.h  types.h  typesana.h
Esp32/Testes/ZigoNico/src/: i2c.c  main.c  pwm.c  task_core0.c  task_core0_old.txt  task_core0_olde2txt  task_core1.c
Esp32/Testes/encoder_logger/: CMakeLists.txt  sdkconfig.esp32doit-devkit-v1.old
Esp32/Testes/encoder_logger/include/: initializers.h  sycronization.h  task_core0.h  task_core1.h  types.h
Esp32/Testes/encoder_logger/src/: i2c.c  initializers.c  main.c  pid.c  pwm.c  (+2 more)
Esp32/Testes/teste_i2c/: platformio.ini  sdkconfig  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
Esp32/Testes/teste_motor/: sdkconfig.esp32doit-devkit-v1
Esp32/Testes/teste_servo/: sdkconfig.esp32doit-devkit-v1.old
Jetson/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Jetson/catkin_ws/src/robot_control/bsc_i2c_controller/: CMakeLists.txt
Jetson/catkin_ws/src/robot_control/bsc_i2c_controller/include/: GetRPiModel.h  bsc_i2c_interface.hpp  types.hpp
Jetson/catkin_ws/src/robot_control/bsc_i2c_controller/src/: bsc_i2c_interface.cpp
Jetson/catkin_ws/src/simulation/: CMakeLists.txt  package.xml
Jetson/catkin_ws/src/simulation/config/: Ackermann_robot_ctrlr_params.yaml  Ackermann_robot_joint_ctrlr_params.yaml
Jetson/catkin_ws/src/simulation/launch/: ackermann_vehicle.launch  rviz.launch  simulation.launch
Jetson/catkin_ws/src/simulation/scripts/: ackermann_controller  teste_controle.py
Jetson/catkin_ws/src/simulation/src/: simple_navigation_goal.cpp
Jetson/catkin_ws/src/simulation/worlds/: mapatrekking2.world  mapatrekking2025.world  newest.world
(+176 files in other folders)
